contractGrammarParser.java
// Generated from contractGrammar.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class contractGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, N=20, T=21, VI=22, DT=23, WS=24;
	public static final int
		RULE_r = 0, RULE_va = 1, RULE_df = 2, RULE_vb = 3, RULE_vj = 4, RULE_ve = 5, 
		RULE_ar = 6, RULE_ars = 7, RULE_vd = 8, RULE_vf = 9, RULE_vc = 10, RULE_b = 11, 
		RULE_ex = 12, RULE_vg = 13;
	public static final String[] ruleNames = {
		"r", "va", "df", "vb", "vj", "ve", "ar", "ars", "vd", "vf", "vc", "b", 
		"ex", "vg"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'('", "') -> '", "')'", "'.'", "'mkdate'", "'and'", "'then'", 
		"'scaleX'", "'scale'", "'truncate'", "'one()'", "'give('", "'+'", "'-'", 
		"'*'", "'/'", "'::'", "'='", null, null, null, "'TimeFunc(Date) -> Double'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "N", "T", "VI", "DT", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "contractGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public contractGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public List<TerminalNode> N() { return getTokens(contractGrammarParser.N); }
		public TerminalNode N(int i) {
			return getToken(contractGrammarParser.N, i);
		}
		public List<VgContext> vg() {
			return getRuleContexts(VgContext.class);
		}
		public VgContext vg(int i) {
			return getRuleContext(VgContext.class,i);
		}
		public List<VfContext> vf() {
			return getRuleContexts(VfContext.class);
		}
		public VfContext vf(int i) {
			return getRuleContext(VfContext.class,i);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << N))) != 0)) {
				{
				setState(31);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case N:
					{
					setState(28);
					match(N);
					setState(29);
					vg();
					}
					break;
				case T__5:
				case T__6:
				case T__7:
				case T__8:
				case T__9:
				case T__10:
				case T__11:
				case T__12:
					{
					setState(30);
					vf();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VaContext extends ParserRuleContext {
		public TerminalNode T() { return getToken(contractGrammarParser.T, 0); }
		public VaContext va() {
			return getRuleContext(VaContext.class,0);
		}
		public VaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_va; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterVa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitVa(this);
		}
	}

	public final VaContext va() throws RecognitionException {
		VaContext _localctx = new VaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_va);
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				match(T__0);
				setState(37);
				match(T);
				setState(38);
				va();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DfContext extends ParserRuleContext {
		public List<TerminalNode> T() { return getTokens(contractGrammarParser.T); }
		public TerminalNode T(int i) {
			return getToken(contractGrammarParser.T, i);
		}
		public VaContext va() {
			return getRuleContext(VaContext.class,0);
		}
		public DfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_df; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterDf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitDf(this);
		}
	}

	public final DfContext df() throws RecognitionException {
		DfContext _localctx = new DfContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_df);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__1);
			setState(43);
			match(T);
			setState(44);
			va();
			setState(45);
			match(T__2);
			setState(46);
			match(T);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VbContext extends ParserRuleContext {
		public TerminalNode T() { return getToken(contractGrammarParser.T, 0); }
		public DfContext df() {
			return getRuleContext(DfContext.class,0);
		}
		public TerminalNode DT() { return getToken(contractGrammarParser.DT, 0); }
		public VbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterVb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitVb(this);
		}
	}

	public final VbContext vb() throws RecognitionException {
		VbContext _localctx = new VbContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vb);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(T);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				df();
				}
				break;
			case DT:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				match(DT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VjContext extends ParserRuleContext {
		public TerminalNode VI() { return getToken(contractGrammarParser.VI, 0); }
		public VjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterVj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitVj(this);
		}
	}

	public final VjContext vj() throws RecognitionException {
		VjContext _localctx = new VjContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vj);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VI:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				match(VI);
				}
				break;
			case EOF:
			case T__0:
			case T__3:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case N:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VeContext extends ParserRuleContext {
		public ArsContext ars() {
			return getRuleContext(ArsContext.class,0);
		}
		public VeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ve; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterVe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitVe(this);
		}
	}

	public final VeContext ve() throws RecognitionException {
		VeContext _localctx = new VeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ve);
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case T__0:
			case T__3:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case N:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				match(T__1);
				setState(59);
				ars();
				setState(60);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArContext extends ParserRuleContext {
		public ExContext ex() {
			return getRuleContext(ExContext.class,0);
		}
		public ArContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterAr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitAr(this);
		}
	}

	public final ArContext ar() throws RecognitionException {
		ArContext _localctx = new ArContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			ex();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArsContext extends ParserRuleContext {
		public List<ArContext> ar() {
			return getRuleContexts(ArContext.class);
		}
		public ArContext ar(int i) {
			return getRuleContext(ArContext.class,i);
		}
		public ArsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterArs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitArs(this);
		}
	}

	public final ArsContext ars() throws RecognitionException {
		ArsContext _localctx = new ArsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			ar();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(67);
				match(T__0);
				setState(68);
				ar();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VdContext extends ParserRuleContext {
		public VjContext vj() {
			return getRuleContext(VjContext.class,0);
		}
		public VdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterVd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitVd(this);
		}
	}

	public final VdContext vd() throws RecognitionException {
		VdContext _localctx = new VdContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vd);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case T__0:
			case T__3:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case N:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(T__4);
				setState(76);
				vj();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VfContext extends ParserRuleContext {
		public List<ArContext> ar() {
			return getRuleContexts(ArContext.class);
		}
		public ArContext ar(int i) {
			return getRuleContext(ArContext.class,i);
		}
		public VfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterVf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitVf(this);
		}
	}

	public final VfContext vf() throws RecognitionException {
		VfContext _localctx = new VfContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_vf);
		int _la;
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				match(T__5);
				setState(80);
				match(T__1);
				setState(81);
				ar();
				setState(82);
				match(T__0);
				setState(83);
				ar();
				setState(84);
				match(T__3);
				}
				break;
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(87);
				match(T__1);
				setState(88);
				ar();
				setState(89);
				match(T__0);
				setState(90);
				ar();
				setState(91);
				match(T__3);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				match(T__11);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				match(T__12);
				setState(95);
				ar();
				setState(96);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VcContext extends ParserRuleContext {
		public TerminalNode N() { return getToken(contractGrammarParser.N, 0); }
		public VeContext ve() {
			return getRuleContext(VeContext.class,0);
		}
		public TerminalNode VI() { return getToken(contractGrammarParser.VI, 0); }
		public VdContext vd() {
			return getRuleContext(VdContext.class,0);
		}
		public ExContext ex() {
			return getRuleContext(ExContext.class,0);
		}
		public VfContext vf() {
			return getRuleContext(VfContext.class,0);
		}
		public VcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterVc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitVc(this);
		}
	}

	public final VcContext vc() throws RecognitionException {
		VcContext _localctx = new VcContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_vc);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case N:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(N);
				setState(101);
				ve();
				}
				break;
			case VI:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(VI);
				setState(103);
				vd();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(T__1);
				setState(105);
				ex();
				setState(106);
				match(T__3);
				}
				break;
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(108);
				vf();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BContext extends ParserRuleContext {
		public VcContext vc() {
			return getRuleContext(VcContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public BContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitB(this);
		}
	}

	public final BContext b() throws RecognitionException {
		BContext _localctx = new BContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_b);
		int _la;
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case T__0:
			case T__3:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case N:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__13:
			case T__14:
			case T__15:
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(113);
				vc();
				setState(114);
				b();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExContext extends ParserRuleContext {
		public VcContext vc() {
			return getRuleContext(VcContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public ExContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterEx(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitEx(this);
		}
	}

	public final ExContext ex() throws RecognitionException {
		ExContext _localctx = new ExContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			vc();
			setState(119);
			b();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VgContext extends ParserRuleContext {
		public VbContext vb() {
			return getRuleContext(VbContext.class,0);
		}
		public ArsContext ars() {
			return getRuleContext(ArsContext.class,0);
		}
		public ExContext ex() {
			return getRuleContext(ExContext.class,0);
		}
		public VgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).enterVg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof contractGrammarListener ) ((contractGrammarListener)listener).exitVg(this);
		}
	}

	public final VgContext vg() throws RecognitionException {
		VgContext _localctx = new VgContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_vg);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__17:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(T__17);
				setState(122);
				vb();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(T__1);
				setState(124);
				ars();
				setState(125);
				match(T__3);
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				match(T__18);
				setState(128);
				ex();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}